<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smscode_1_0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background"
        android:layout_marginTop="40sp">
    </TextView>

   <Button
       android:id="@+id/btn_int"
       android:layout_width="350dp"
       android:layout_height="100dp"
       android:layout_below="@id/logo"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="20dp"
       android:background="@drawable/input_design"
       android:text="@string/activ_int"
       android:textAllCaps="false"
       android:textSize="25sp"
       android:textStyle="bold">
       </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_below="@id/btn_int"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:text="@string/activ_tv"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold">
    </Button>









</RelativeLayout>